--- a/pubman/pubman_installer/pom.xml
+++ b/pubman/pubman_installer/pom.xml
@@ -37,12 +37,12 @@
 	<artifactId>pubman_installer</artifactId>
 	<name>pubman_installer</name>
 	<packaging>jar</packaging>
-	<version>7.2.4</version>
+	<version>7.2.5-SNAPSHOT</version>
 	
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman_installer-7.2.4</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman_installer-7.2.4</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman_installer-7.2.4</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman/pubman_installer</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman/pubman_installer</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/pubman/</url>
 	</scm>
 	
 	<build>
