--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -350,6 +350,11 @@
 							<artifactId>aa_logic</artifactId>
 							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
+						<jarModule>
+							<groupId>org.apache.tika</groupId>
+			 				<artifactId>tika-core</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
 					</modules>
 				</configuration>
 			</plugin>
@@ -777,6 +782,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>1.4</version>
 			<scope>compile</scope>
+		</dependency>
+		 <dependency>
+			  <groupId>org.apache.tika</groupId>
+			  <artifactId>tika-core</artifactId>
+			  <version>1.3</version>
 		</dependency>
 	</dependencies>
 	<profiles>
