--- a/common_services/transformation/pom.xml
+++ b/common_services/transformation/pom.xml
@@ -203,6 +203,13 @@
 			<version>2.7.1</version>
 			<scope>provided</scope>
 		</dependency>
+		 <dependency>
+		  <groupId>org.apache.tika</groupId>
+		  <artifactId>tika-core</artifactId>
+		  <version>1.3</version>
+		</dependency>
+		
+		
 <!-- 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>citationmanager</artifactId>
