--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -884,8 +884,7 @@
 				<plugins>
 					<plugin>
 						<groupId>org.zeroturnaround</groupId>
-						<artifactId>javarebel-maven-plugin</artifactId>
-						<version>1.0.5</version>
+						<artifactId>jrebel-maven-plugin</artifactId>
 						<executions>
 							<execution>
 								<id>generate-rebel-xml</id>
@@ -895,14 +894,9 @@
 								</goals>
 							</execution>
 						</executions>
-						<dependencies>
-							<dependency>
-								<groupId>org.codehaus.plexus</groupId>
-								<artifactId>plexus-utils</artifactId>
-								<version>1.4.1</version>
-								<scope>runtime</scope>
-							</dependency>
-						</dependencies>
+						<configuration>
+								<addResourcesDirToRebelXml>true</addResourcesDirToRebelXml>
+						</configuration>
 					</plugin>
 				</plugins>
 			</build>
