--- a/common_services/pom.xml
+++ b/common_services/pom.xml
@@ -370,21 +370,6 @@
 								</pluginExecution>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>org.zeroturnaround</groupId>
-										<artifactId>
-											javarebel-maven-plugin
-										</artifactId>
-										<versionRange>[1.0.5,)</versionRange>
-										<goals>
-											<goal>generate</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<execute />
-									</action>
-								</pluginExecution>
-								<pluginExecution>
-									<pluginExecutionFilter>
 										<groupId>org.apache.maven.plugins</groupId>
 										<artifactId>maven-antrun-plugin</artifactId>
 										<versionRange>[1.3,)</versionRange>
@@ -810,6 +795,9 @@
 								</goals>
 							</execution>
 						</executions>
+						<configuration>
+								<addResourcesDirToRebelXml>true</addResourcesDirToRebelXml>
+						</configuration>
 					</plugin>
 				</plugins>
 			</build>
@@ -845,6 +833,9 @@
 								</goals>
 							</execution>
 						</executions>
+						<configuration>
+								<addResourcesDirToRebelXml>true</addResourcesDirToRebelXml>
+						</configuration>
 					</plugin>
 				</plugins>
 			</build>
